Fixing layout issues of resume-header section

--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ h4, h5 {
     z-index: 9999;
     width: 100%;
     background-color: #ffffff;
-    height: 101px;
+    height: 106px;
     top: 0;
 }
 
