--- a/css/style.print.css
+++ b/css/style.print.css
@@ -5,8 +5,10 @@ body {
 }
 
 #resume-header {
-    position: relative;
+    position: static;
     /*display: table-header-group;*/
+    width: auto;
+    height: auto;
 }
 
 #resume-body {
